# storylord

./: AGENTS.md  Makefile  README.md  pyproject.toml  rules-test.txt
.claude/: settings.json
.claude/agent-memory/spec-collaborator/: MEMORY.md
.github/workflows/: ff-only.yml
docs/: developer-workflow.md  development-process.md  slack-app-setup.md  writing-deities.md
docs/adrs/: agent-tool-framework.md  narrator-character-integration-adr.md  narrator-character-integration-codex-transcript.md
examples/: sample_input.yaml
infra/: Dockerfile  docker-compose.api.yml  docker-compose.elk.yml  uvicorn_log_config.json
infra/filebeat/: filebeat.yml
scripts/: bootstrap.sh
specs/: api-server-characters.md  slack-character-creator.md
src/: bootstrap.py  config.py  models.py  story_lord.py
src/agents/: discovery.py  protocols.py
src/agents/architect/: architect_default.py
src/agents/character/: base.py  character_default.py  character_mbti.py  protocols.py  registry.py
src/agents/editor/: editor_default.py  editor_simile_smasher.py
src/agents/narrative/: narrator_default.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/api/routers/: characters.py
src/character_store/: slugify.py  store.py
src/graph/: nodes.py  state.py  tool_loop.py
src/slack_app/: __init__.py  app.py  modals.py  state.py  views.py
src/slack_app/handlers/: actions.py  commands.py  messages.py  submissions.py
src/tools/: __init__.py  character_speak.py  context.py  discovery.py  protocols.py  registry.py
src/tools/builtins/: __init__.py
src/tui/: __init__.py  app.py  character_studio.py
src/tui/widgets/: __init__.py  agent_config.py  character_list.py  character_profile.py  interaction.py
tests/: conftest.py
tests/tui/: test_app.py  test_character_studio.py  test_character_studio_rendering.py  test_helpers.py  test_load_integration.py
tests/unit/: __init__.py  conftest.py  test_character_agents.py  test_graph_tool_loop.py  test_model_config.py  test_models.py  test_models_memory.py  test_story_lord.py  test_tools_character_speak.py  test_tools_registry.py
tests/unit-claude/: ANALYSIS.md  changes.md  conftest.py  test_api_create_character.py  test_api_delete_character.py  test_api_get_character_by_id.py  test_api_list_characters.py  test_api_update_character.py  test_backward_compatibility.py  test_character_registry.py  test_character_speak.py  test_character_store_delete.py  test_character_store_get_by_uuid.py  test_character_store_list_exists.py  test_character_store_load.py  test_character_store_load_all.py  test_character_store_save.py  test_character_store_save_rename.py  test_character_store_uuid_migration.py  test_correction_modal.py  test_create_character_command.py  test_delta.py  test_freeform_collection.py  test_library_resolution.py  test_library_resolution_integration.py  test_modal_1.py  test_modal_2.py  test_models.py  test_preview_save.py  test_slugify.py  test_state_manager.py  test_wizard_state.py
tests/unit-claude/agents/: test_agents_discovery.py
tests/unit-claude/agents/character/: test_character_mbti.py
tests/unit-codex/: ANALYSIS.md  CHANGES.md  conftest.py  test_character_registry.py  test_config.py  test_discovery.py  test_graph_delta.py  test_graph_nodes.py  test_graph_workflow.py  test_models_memory.py  test_tools_context.py  test_tools_registry.py
tests/unit/agents/: test_discovery.py
tests/unit/agents/character/: __init__.py  test_character_default.py  test_character_mbti.py  test_registry.py
tests/unit/graph/: test_delta.py
tests/unit/tools/: test_character_speak.py  test_discovery.py  test_registry.py
